--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@vercel/postgres": "^0.8.0",
+    "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.9",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
@@ -19,7 +20,7 @@
     "react-dom": "19.0.0-rc-f38c22b244-20240704",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
-    "use-debounce": "^10.0.1",
+    "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
