--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@prisma/adapter-pg": "^5.20.0",
+    "@prisma/client": "^5.20.0",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dotenv": "16.4.5",
     "next": "15.0.0-canary.56",
     "next-auth": "5.0.0-beta.19",
+    "pg": "^8.13.0",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f38c22b244-20240704",
     "react-dom": "19.0.0-rc-f38c22b244-20240704",
     "tailwindcss": "3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
@@ -29,6 +34,6 @@
     "@types/react-dom": "18.3.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": "22.x"
   }
 }
